--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,7 +75,7 @@ button {
 =======================*/
 .header {
     width: 100%;
-    background-color:#1f214e;
+    background-color:#141524;
 }
 
 .container {
@@ -156,6 +156,14 @@ button {
 
 /*tabs
 ==========*/
+.testPicker {
+    position: absolute;
+    z-index: 5000;
+    width: 100px;
+    height: 300px;
+    background-color:#5af874;
+    align-items: center;
+}
 .tabs {
     align-items: center;
     display: flex;
