--- a/CSS/style.css
+++ b/CSS/style.css
@@ -87,7 +87,7 @@ button {
 }
 
 .header__logo {
-    fill: #68596e;
+    fill: #6d6d6d;
     /* display: flex; */
     height: 30px;
     width: 180px;
